--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemailer": "^6.4.13",
     "nodemailer-sendgrid": "^1.0.3",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "path": "^0.12.7",
     "shortid": "^2.2.15"
   }
 }
