--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name":"server",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main":"server.js",
+  "main": "server.js",
   "scripts": {
-    "start":"node server.js",
-    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "start": "node server.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
