--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "frontend",
+  "name": "client",
+  "homepage":"https://Ramkiran007.github.io/instagramclone",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "crypto": "^1.0.1",
     "express-validator": "^6.6.1",
+    "gh-pages": "^3.1.0",
     "isomorphic-fetch": "^3.0.0",
     "materialize-css": "^1.0.0",
     "react": "^16.13.1",
@@ -21,8 +22,10 @@
     "shortid": "^2.2.15"
   },
   "scripts": {
-    "start":"react-scripts start",
-    "build":"react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
